# pxLUV

./: CMakeLists.txt  README.md
include/core/: edit_params.h  finalizer.h  poly_list.h  pxluv.h  quad.h  tex_coord.h  tri.h
include/gui/: edit_window.h  globs.h  list_editor.h  top_bar.h  window.h
include/io/: file_io.h
src/: main.c
src/core/: edit_params.c  finalizer.c  poly_list.c  pxluv.c  quad.c  tex_coord.c  tri.c
src/gui/: edit_window.c  globs.c  list_editor.c  top_bar.c  window.c
src/io/: file_io.c
